2007-06-20  Lillian Angel  <langel@redhat.com>
	
	* patches/icedtea-copy-plugs.patch: Fixed paths.

2007-06-20  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added file to copy.
	* Makefile.in: Regenerated.
	* patches/icedtea-copy-plugs.patch: Added MetaData.java patch for
	ConstructorsProperties cast.
	* rt/com/sun/jmx/snmp/agent/AcmChecker.java: removed file.

2007-06-20  Kyle Galloway  <kgallowa@redhat.com>

	* Makefile.am: Only generate sources if necessary.
	* Makefile.in: Regnerated.

2007-06-19  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* configure.ac: Bump version to 1.1.
	* configure: Regenerate.

2007-06-19  Francis Kung  <fkung@redhat.com>

	* Makefile.in: Regenerated.
	* patches/icedtea-speed.patch: Update for hotspot build.

2007-06-18  Francis Kung  <fkung@redhat.com>

	* Makefile.am: Apply icedtea-speed patch during fast build.
	* acinclude.m4: Add fast build option.
	* configure.ac: Likewise.
	* patches/icedtea-speed.patch: New file.
	* Makefile.in: Regenerated.
	* configure: Likewise.

2007-06-18  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Removed OPENJDK_SRC_ZIP.
	* Makefile.in: Regenerated.
	* acinclude.m4: Added with-openjdk-src-zip option
	* configure: Regenerated.
	* configure.ac: Added new function.

2007-06-18  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (ICEDTEA_PATCHES): Add
	icedtea-text-relocations.patch.
	* Makefile.in: Regenerate.
	* patches/icedtea-text-relocations.patch: New file.

	* Makefile.am (patch, unpatch, patchecj, unpatchecj): Show
	--dry-run output.
	* Makefile.in: Regenerate.

	* patches/icedtea-ports.patch: Update for b13.

2007-06-18  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-ecj-bootstrap.patch: Fix typo.

2007-06-18  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-ecj-bootstrap.patch: Revert changes from 2007-06-15.

2007-06-15  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-ports.patch: Removed ChangeLog patch.

2007-06-15  Francis Kung  <fkung@redhat.com>
