@@ -1,3 +1,11 @@
+2007-06-20  Francis Kung  <fkung@redhat.com>
+
+	* Makefile.am: Clean up fast-build option.
+	* acinclude.m4: Likewise.
+	* patches/icedtea-speed.patch: Add -g option.
+	* Makefile.in: Regenerated.
+	* configure: Likewise.
+
 2007-06-20  Lillian Angel  <langel@redhat.com>
 	
 	* patches/icedtea-copy-plugs.patch: Fixed paths.
